Added player sprites + movements