@@ -2,7 +2,7 @@ package com.hotlinecornella;
 
 import com.badlogic.gdx.ApplicationAdapter;
 import com.badlogic.gdx.Gdx;
-import com.badlogic.gdx.graphics.GL20;
+import com.badlogic.gdx.Input;
 import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.g2d.SpriteBatch;
 import com.badlogic.gdx.utils.ScreenUtils;
@@ -13,6 +13,7 @@ public class Main extends ApplicationAdapter {
     private SpriteBatch batch;
     private Texture tileset;
     private GameMap gameMap;
+    private Player player;
 
     @Override
     public void create() {
@@ -24,6 +25,7 @@ public class Main extends ApplicationAdapter {
                 return;
             }
             tileset = new Texture(Gdx.files.internal(gameMap.levels.getFirst().layers.getFirst().tilesSheetFile));
+            player = new Player("images/player1_idle.png", "images/player1_run.png", 50, 150); // Initialize player with texture and position
         } catch (Exception e) {
             logger.error("Error during create", e);
         }
@@ -32,18 +34,35 @@ public class Main extends ApplicationAdapter {
     @Override
     public void render() {
         try {
+            handleInput();
             ScreenUtils.clear(0.15f, 0.15f, 0.2f, 1f);
             batch.begin();
             renderMap();
+            player.update(Gdx.graphics.getDeltaTime());
+            player.render(batch); // Render the player
             batch.end();
         } catch (Exception e) {
             logger.error("Error during render", e);
         }
     }
-
+    private void handleInput() {
+        float moveSpeed = 100 * Gdx.graphics.getDeltaTime();
+        if (Gdx.input.isKeyPressed(Input.Keys.LEFT)) {
+            player.move(-moveSpeed, 0);
+        }
+        if (Gdx.input.isKeyPressed(Input.Keys.RIGHT)) {
+            player.move(moveSpeed, 0);
+        }
+        if (Gdx.input.isKeyPressed(Input.Keys.UP)) {
+            player.move(0, moveSpeed);
+        }
+        if (Gdx.input.isKeyPressed(Input.Keys.DOWN)) {
+            player.move(0, -moveSpeed);
+        }
+    }
     private void renderMap() {
         try {
-            GameMap.Level.Layer layer = gameMap.levels.get(0).layers.get(0);
+            GameMap.Level.Layer layer = gameMap.levels.getFirst().layers.getFirst();
             int tileWidth = layer.tilesWidth;
             int tileHeight = layer.tilesHeight;
             int mapWidth = layer.tileMap[0].length * tileWidth;
@@ -71,5 +90,6 @@ public class Main extends ApplicationAdapter {
     public void dispose() {
         batch.dispose();
         tileset.dispose();
+        player.dispose(); // Dispose of player resources
     }
 }
